# UCL-Scheduler

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  access_availability.py  app.py  constrained_scheduler.py  only_constrained.py  parse_availability.py  pyproject.toml  requirements.txt  setup.py  terminal_viewer.py  testing.py
OLD FILES/: gsheet_access.py  parse_availability.py
src/ucl_scheduler/: __init__.py
src/ucl_scheduler/algorithm/: constrained_scheduler.py  optimal_scheduler.py
src/ucl_scheduler/data_parsing/: access_availability.py  availability_manager.py  parse_availability.py  room_manager.py
src/ucl_scheduler/solution_viewing/: html_converter.py  schedule_viewer.py  terminal_viewer.py
src/ucl_scheduler/web-interface/: app.py  scheduler_api.py
src/ucl_scheduler/web_interface/: __init__.py  app.py  debug.html  index.html  scheduler_api.py
