[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucl-scheduler"
version = "1.0.0"
description = "An intelligent rehearsal scheduling system with optimization capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ronan Venkat", email = "ronanvenkat@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "ortools>=9.11.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "gspread>=5.0.0",
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
web = [
    "flask>=2.3.0",
]

[project.scripts]
ucl-scheduler = "ucl_scheduler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
